--- a/ProductManagement/appsettings.json
+++ b/ProductManagement/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-378NU82;Database=ProductManagementDb;Trusted_Connection=true;TrustServerCertificate=true"
+  }
 }
